# canopy-cloud

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: canopy-plan.yml  ci.yml
canopy/: __init__.py  config.py
canopy/cli/: main.py
canopy/dashboard/: app.py
canopy/dashboard/static/: index.html  style.css
canopy/engine/: audit.py  detectors.py  plan.py  policy.py  report.py
canopy/engine/apply/: approval.py  aws_executor.py  executor.py  gcp_executor.py
canopy/engine/audit_log/: reader.py  writer.py
canopy/engine/carbon/: __init__.py  client.py  estimator.py
canopy/engine/carl/: scheduler.py
canopy/engine/iac/: __init__.py  pulumi.py  terraform.py
canopy/engine/providers/: __init__.py  aws.py  base.py  gcp.py
canopy/mcp/: __init__.py  billing_aws.py  billing_gcp.py  electricity.py  github.py  slack.py
canopy/models/: __init__.py  audit_log.py  carl.py  core.py  iac.py  policy.py
docs/: audit-walkthrough.md  quickstart.md
tests/: test_apply_executor.py  test_approval.py  test_audit_log.py  test_aws_pricing.py  test_carbon.py  test_carl.py  test_config.py  test_dashboard.py  test_detectors.py  test_gcp.py  test_mcp_billing.py  test_mcp_electricity.py  test_mcp_github.py  test_mcp_slack.py  test_models.py  test_plan.py  test_policy.py  test_pulumi.py  test_report.py  test_terraform.py
